--- a/styles.css
+++ b/styles.css
@@ -98,16 +98,17 @@ input::placeholder {
 .main-weather-display {
   width: fit-content;
   margin: auto;
-  padding: 3em 2.5em;
+  padding: 3.5em 2.5em;
   display: flex;
   font-weight: bolder;
   gap: 1.6em;
+  position: relative;
 }
 
 .weather-details {
   border-left: 2px solid rgba(255, 255, 255, 0.555);
   padding-left: 1em;
-  margin-top: 6.4em;
+  margin-top: 5.4em;
   line-height: 2em;
   margin-bottom: 3em;
 }
@@ -118,28 +119,21 @@ input::placeholder {
 
 .degrees {
   font-size: 8.6em;
-  margin-top: -0.2em;
-  position: relative;
-  color: white;
+  margin-top: -0.3em;
 }
 
 .symbol {
   font-size: 1.5rem;
   position: absolute;
-  top: 1.8rem;
-  left: 9rem;
+  top: 5em;
+  left: 7.5em;
 }
 
 .symbol-small {
  font-size: 0.5em;
  position: absolute;
- bottom:  1.3em;
- right: -0.5em;
-}
-
-.feels-like{
-  position: relative;
-  color: white;
+ top:  18em;
+ right: 4.2em;
 }
 
 .credits {
